# custom-lstm

./: .gitignore  README.md  pyproject.toml  setup.py
custom_lstm/: utils.py
custom_lstm/losses/: acf_losses.py  std_acf.py
custom_lstm/models/: lstm_custom_stateful.py  lstm_optimized.py  lstm_vanilla.py  lstm_vanilla_stateful.py  mlp.py
notebooks/: exp_custom_lstm_stateful.ipynb  exp_ew_acf.ipynb  exp_pytorch_lstm.ipynb  exp_vanilla_lstm.ipynb  exp_vanilla_lstm_stateful.ipynb  exp_xgboost_passengers.ipynb
