[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-lstm"
version = "0.1.0"
description = "Custom LSTM utilities"
readme = "README.md"
authors = [{ name = "Luis Preciado", email = "luis.pre99@gmail.com" }]

[tool.setuptools.packages.find]
where = ["."] 
include = ["*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
preview = true
select = ["E", "F", "W", "N"]
ignore = ["E501"]